force-app/main/default/objects/API_Usage_Snapshot__c/fields/Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Limit__c</fullName>
    <label>Daily Limit</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>