force-app/main/default/objects/API_Usage_Snapshot__c/fields/Percent_Used__c.field-meta.xml
<CustomField>
    <fullName>Percent_Used__c</fullName>
    <label>Percent Used</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>