force-app/main/default/objects/API_Usage_Snapshot__c/fields/Projected_Exhaustion__c.field-meta.xml
<CustomField>
    <fullName>Projected_Exhaustion__c</fullName>
    <label>Projected Exhaustion</label>
    <type>DateTime</type>
</CustomField>