force-app/main/default/objects/API_Usage_Snapshot__c/fields/Taken_On__c.field-meta.xml
<CustomField>
    <fullName>Taken_On__c</fullName>
    <label>Taken On</label>
    <type>DateTime</type>
</CustomField>